# Email_Forensics_Analyzer

./: README.md  pyproject.toml  run.sh  run_gui.sh  sample.mbox
out_gui/: attachments_report.csv  campaigns.csv  emails.csv  headers.jsonl  interactions.csv  spoofing_report.csv
out_test/: attachments_report.csv  campaigns.csv  emails.csv  headers.jsonl  interactions.csv  spoofing_report.csv
src/email_forensics_analyzer/: attachments.py  cli.py  gui.py  interactions.py  parser.py  spoofing.py  utils.py
src/email_forensics_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
